deployment/k8s/app/set-replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: articlesvc
spec:
  replicas: 0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imagesvc
spec:
  replicas: 0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registrationsvc
spec:
  replicas: 0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersvc
spec:
  replicas: 0
