deployment/k8s/app/image-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-service
  labels:
    app: imagesvc
spec:
  type: NodePort
  ports:
    - port: 48375
      targetPort: 8080
  selector:
    app: imagesvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imagesvc
  labels:
    app: imagesvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imagesvc
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
      labels:
        app: imagesvc
    spec:
      containers:
        - name: imagesvc
          image: haipiaodev/image-service:0.0.1
          imagePullPolicy: Always
          ports:
            - name: imagesvc
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 3
          volumeMounts:
            - name: properties-volume
              mountPath: /config
              readOnly: true
      volumes:
        - name: properties-volume
          configMap:
            name: app-configmap
