deployment/k8s/app/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: usersvc
spec:
  type: NodePort
  ports:
    - port: 48375
      targetPort: 8080
  selector:
    app: usersvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersvc
  labels:
    app: usersvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usersvc
  template:
    metadata:
      labels:
        app: usersvc
    spec:
      containers:
        - name: usersvc
          image: haipiaodev/user-service:0.0.6
          imagePullPolicy: Always
          ports:
            - name: usersvc
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 3
          volumeMounts:
            - name: properties-volume
              mountPath: /config
              readOnly: true
      volumes:
        - name: properties-volume
          configMap:
            name: app-configmap
